# video-temporal-diagnostics

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml
experiments/: alpha_sweep.py  bootstrap_cis.py  common.py  eval_cluster_bootstrap.py  eval_ensemble.py  eval_epic_claude_probe.py  eval_epic_gemini_probe.py  eval_epic_linear_probe.py  eval_epic_temporal_order.py  eval_epic_xclip_reversal.py  eval_fusion_pipeline.py  eval_grouped_pair_bootstrap.py  eval_hdd_bof_dtw_rerank.py  eval_hdd_cross_session.py  eval_hdd_encoder_seq.py  eval_hdd_fusion.py  eval_hdd_intersections.py  eval_hdd_left_vs_right.py  eval_hdd_motion_proxy.py  eval_hdd_optical_flow.py  eval_hdd_ordered_maxsim.py  eval_hdd_ordered_maxsim_vjepa2.py  eval_hdd_pl_stitch.py  eval_hdd_residual_ablation.py  eval_hdd_retrieval_protocol.py  eval_hdd_tara.py  eval_hdd_vlm_bridge.py  eval_hdd_vlm_generative.py  eval_mlp_probe.py  eval_muvr.py  eval_nuscenes_fusion.py  eval_nuscenes_intersections.py  eval_nuscenes_vlm_bridge.py  eval_nuscenes_vlm_generative.py  eval_nymeria_activities.py  eval_pooling_ablation.py  eval_reranking_pipeline.py  eval_ssv2_motion_direction.py  eval_vcdb.py  eval_vcdb_attack_suite.py  (+17 more)
paper/: .gitignore  README.md  WRITING.md  checklist.tex  neurips.tex  paper.tex  paper_temp.tex  video4real.bib  video4real.tex
results/: PROVENANCE.md
scripts/: aggregate_vlm_results.py  build_supp_bundle.sh  download_bdd100k.py  download_epic_kitchens.py  download_everyday_life.sh  download_muvr.sh  download_nuscenes.py  download_nymeria.sh  download_vcdb.sh  (+13 more)
(+45 files in other folders)
