[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-temporal-diagnostics"
version = "0.1.0"
description = "Diagnostic framework for temporal sensitivity in video retrieval embeddings"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.56.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "av>=10.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
vlm = [
    "accelerate>=0.26.0",
    "qwen-vl-utils>=0.0.8",
    "bitsandbytes>=0.46.1",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "ftfy>=6.1.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pyrefly>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["video_retrieval*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["experiments"]
